client/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-client-deploy
  labels:
    app: app-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-client
  template:
    metadata:
      name: app-client-tmpl
      labels:
        app: app-client
    spec:
      containers:
        - name: app-client
          image: dabaoku/app-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
