client/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-client-svc
spec:
  type: NodePort
  selector:
    app: app-client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 32000
