client/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-client-svc
                port:
                  number: 30300
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: app-server-svc
                port:
                  number: 30500
